<resources>
    <string name="app_name">Student Application</string>
    <string name="adaptive_ne_learning_app">Adaptive\nE-Learning App</string>
    <string name="motivation_is_what_set_you_in_motion_n_habit_is_what_keeps_you_going">Motivation is what set you in motion,\n habit is what keeps you going</string>
    <string name="first_see_learning">First see Learning</string>
    <string name="connect_with_everyone">Connect With Everyone</string>
    <string name="always_fascinated_learning">Always Fascinated Learning</string>
    <string name="next">Next</string>
    <string name="welcome_aboard">Welcome Aboard!</string>
    <string name="let_s_get_your_career_ready">Let\'s get your career ready.</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_stage">Enter Your Stage</string>
    <string name="signup">Sign Up</string>
    <string name="already_have_account">Already have Account ?</string>
    <string name="sign_up">Login</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t Have Account ?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_will_send_to_you">Reset Password Will send to you</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="my_courses">Explore Courses</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="search_your_course">Search Your Course</string>
    <string name="about_us">About us</string>

    <string-array name="Stage_Names">
        <item>الصف الأول الثانوي</item>
        <item>الصف الثاني الثانوي</item>
        <item>الصف الثالث الثانوي</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="quiz">Quiz</string>
    <string name="selectImageTv">اختيار صورة</string>
    <string name="full_name">الاسم كاملا</string>
    <string name="phone_num">رقم الهاتف</string>
    <string name="email">الإيميل</string>
    <string name="updateTv">تحديث</string>
    <string name="idStudent">الرقم التعريفي</string>
    <string name="hello">Hello</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="privacy_and_security">Privacy And Security</string>
    <string name="support_amp_about"><![CDATA[Support & About]]></string>
    <string name="my_lectures">My Lectures</string>
    <string name="help">Help &amp; Support</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email_tv">Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="student_is_blocked">أنت أصبحت غير مقيد ضمن الطلبة المستخدمين للتطبيق !</string>
    <string name="server_error">هناك مشكلة في السيرفر حاول لاحقا!</string>
    <string name="internet_unavilable">تأكد من الاتصال بالانترنت أولا !</string>
    <string name="no_internet_found">لا يتوفر إنترنت تأكد من شبكة الجوال !</string>
    <string name="lectures">Lectures</string>
    <string name="tv_header2_home">what would you like to \nlearn today ? search below</string>
    <string name="no_quiz">No Quiz !</string>
    <string name="there_are_no_exams_available_now">There are no exams \n available now</string>
    <string name="stay_updated">stay notified about new \nlectures and any updates</string>
    <string name="allow">Allow</string>
    <string name="skip">Skip</string>
    <string name="lecture_desc">Lecture Desc</string>
    <string name="lecture_note">Lecture Note</string>
    <string name="view_pdf">View PDF</string>
    <string name="enter_address">Enter Address</string>
    <string name="logout">Logout</string>
    <string name="enter_code">Enter Code :</string>
    <string name="logout_from_application">Logout From Application</string>
    <string name="account">Account</string>

    <string name="no_internet_connection">No Internet connection</string>
    <string name="no_item_found">no items found</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="quiz_subject">Quiz Subject</string>
    <string name="quiz_time">Quiz Time</string>
    <string name="quiz_questions_count">Questions Count</string>
    <string name="tv_quiz_completed">The exam was successful </string>
    <string name="go_to_quiz">Go To Quiz</string>
    <string name="sure_go_to_quiz">if you click GO , You should not go out or consider yourself examined !</string>
    <string name="submit">Submit</string>
    <string name="submit_answers">ٍSubmit Answers…</string>
    <string name="quiz_submitted_successfully">Quiz Aswers Submitted Successfully</string>
    <string name="sure_submit_answers">Are You Sure Submit Your Answers ?</string>
    <string name="g_arabic">اللغة العربية</string>
    <string name="g_english">English</string>
    <string name="language">Language</string>


</resources>