<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="12dp"
    android:paddingHorizontal="6dp">

    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="4dp"
        android:text="@string/reset_password"
        android:textColor="@color/dark_blue_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmailLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/reset_password_will_send_to_you"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tvResetPassword"
        app:layout_constraintTop_toBottomOf="@id/tvResetPassword" />


    <EditText
        android:id="@+id/etResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmailLink" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancelResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etResetPassword"
        app:layout_constraintStart_toStartOf="@id/etResetPassword"
        android:textColor="@color/dark_blue_color"
        app:layout_constraintWidth_percent=".35"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:background="@drawable/btn_cancel_bg"
        />
    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnConfirmResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btnCancelResetPassword"
        app:layout_constraintBottom_toBottomOf="@id/btnCancelResetPassword"
        app:layout_constraintEnd_toEndOf="@id/etResetPassword"
          android:textColor="@color/white"
        app:layout_constraintWidth_percent=".35"
        android:text="@string/confirm"
        android:textAllCaps="false"
        app:spinning_bar_color="@color/white"
        android:textSize="18sp"
        android:background="@drawable/btn_confirm_bg"
        />

</androidx.constraintlayout.widget.ConstraintLayout>