<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="24dp">

    <TextView
        android:id="@+id/tvLogoutFromApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/logout_from_application"
        android:textColor="@color/blue_color"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_pdf_bg"
        android:padding="8dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/btnCancelLogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogoutFromApp"
        app:layout_constraintWidth_percent=".4"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancelLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_cancel_bg"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/blue_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/btnConfirmLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnConfirmLogout"
        app:layout_constraintTop_toTopOf="@id/btnConfirmLogout"
        app:layout_constraintWidth_percent=".4"

        />
</androidx.constraintlayout.widget.ConstraintLayout>