<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvEnterCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textColor="@color/blue_color"
        android:textSize="20sp"
        android:text="@string/enter_code"
         />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEnterCode"
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent=".8"
        android:background="@drawable/edit_text_bg"
        android:paddingVertical="8dp"
        android:inputType="number"
        android:paddingHorizontal="10dp"
        android:textSize="20sp"
        android:id="@+id/etCode"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCode"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_pdf_bg"
        android:textSize="20sp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toStartOf="@id/btnCancelCode"
        app:layout_constraintWidth_percent=".4"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:padding="8dp"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancelCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/btn_pdf_bg"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/btnConfirmCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnConfirmCode"

        app:layout_constraintTop_toTopOf="@id/btnConfirmCode"
        app:layout_constraintWidth_percent=".4"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>